Adding static plugin path

--- a/templates/default/config.py.erb
+++ b/templates/default/config.py.erb
@@ -31,15 +31,7 @@ BOT_DATA_DIR = '<%= node['err']['data_path'] %>'
 # locally before publishing it. Note that you can specify only a single
 # directory, however you are free to create subdirectories with multiple
 # plugins inside this directory.
-<%- unless @plugin_paths.count > 0 -%>
-BOT_EXTRA_PLUGIN_DIR = None
-<%- else -%>
-BOT_EXTRA_PLUGIN_DIR = [
-<%- @plugin_paths.each do |p| -%>
-    '<%= p %>',
-<%- end -%>
-]
-<%- end -%>
+BOT_EXTRA_PLUGIN_DIR = <%= node['err']['plugin_path'] %>
 
 # The location of the log file. If you set this to None, then logging will
 # happen to console only.
